task02/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task02-service
spec:
  selector:
    app: task02
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
